--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           <p>Not that long ago, I remember starting my foray into 
           coding and programming...</p>
           <p>I started out with some fun coding games which barely 
-          scratched any kind of surface, then moved on to learning 
-          some HTLM and CSS for creating and updating a secure 
+          scratched any kind of surface. Then, moved on to learning 
+          some HTML and CSS for creating and updating a secure 
           web site in the Marine Corps. Later, I would take a 
           Coursera course in Statistics that taught a great deal
           of R. Once I was in school for my current program; 
-           though, I moved on to SPSS...but I won't have <em>that</em> resource forever!</p>
+           though, I moved on to SPSS - but I won't have <em>that</em> resource forever!</p>
         </div>
       </div>
     </div>
